fix footer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -407,7 +407,7 @@ footer nav span {
   }
 
   section .footer-aligner {
-    height: 100vh;
+    height: 25vh;
   }
 
   footer {
